--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ main #numpad {
 
     display: grid;
     grid-template-areas: 
-    "ac del dot div"
+    "ac ac del div"
     "seven eight nine mul"
     "four five six plus"
     "one two three minu"
